# wasm-to-scratch

./: Cargo.toml  debug.wasm
depict_nums/: Cargo.toml
depict_nums/src/: f32.rs  f64.rs  i32.rs  lib.rs
sb-itchy-support/: Cargo.toml
sb-itchy-support/src/: lib.rs
sb3_ast/: Cargo.toml
sb3_ast/src/: block.rs  lib.rs  project.rs  sprite.rs  stage.rs
sb3_ast/src/events/: func_event.rs  mod.rs
sb3_ast/src/input_block/: mod.rs
scratch/: default.sb3  none.sb3  out.sb3  wasmの元.sb3  wasmの元2.sb3
testcode/: Cargo.toml  default_testcode.wasm
testcode/src/: lib.rs
testcode/wasm/: testcode.d.ts  testcode.js  testcode_bg.js  testcode_bg.wasm  testcode_bg.wasm.d.ts
testreactor/: Cargo.toml
testreactor/src/: bindings.rs
testreactor/wit/: world.wit
wasm-sb-bindgen/: Cargo.toml  file
wasm-sb-bindgen-macro/: Cargo.toml
wasm-sb-bindgen-macro/src/: lib.rs  version.rs
wasm-sb-bindgen-macro/src/macros/: mod.rs  placeholder.rs  support.rs
wasm-sb-bindgen-testcode/: Cargo.toml  file
wasm-sb-bindgen-testcode/src/: lib.rs
wasm-sb-bindgen/src/: closure.rs  externref.rs  lib.rs
wasm-sb-bindgen/src/convert/: big_bytes.rs  cast.rs  closure.rs  describe.rs  impls.rs  mod.rs  slices.rs  traits.rs
wasm-to-scratch/: Cargo.toml
wasm-to-scratch/src/: _old.rs  lib.rs  main.rs  util.rs
wasm-to-scratch/src/scratch/: mod.rs  rewrite_dependency.rs  sb3.rs  test_data.rs
wasm-to-scratch/src/scratch/block/: function_code.rs  mod.rs  procedures_definition.rs
wasm-to-scratch/src/scratch/block/buddy_block/: mod.rs
wasm-to-scratch/src/scratch/block/custom_block/: custom_block_func.rs  custom_block_stack_builder.rs  mod.rs  procedures_definition.rs
wasm-to-scratch/src/scratch/block/to_utf8/: generator.rs
wasm-to-scratch/src/wasm/: descriptor.rs  interpreter_descriptor.rs  mod.rs
wasm2sb/: Cargo.toml  debug.wasm  output.wasm  wasm_sb_bindgen_testcode.wasm
wasm2sb/scratch/: out.sb3
wasm2sb/src/: config.rs  error.rs  lib.rs  main.rs  pre_name.rs  test_exec.rs  util.rs
wasm2sb/src/scratch/: generate_id.rs  mod.rs  rewrite_dependency.rs  sb3.rs  test_data.rs
wasm2sb/src/scratch/block/: function_code.rs  mod.rs
wasm2sb/src/scratch/block/buddy_block/: mod.rs
wasm2sb/src/scratch/block/custom_block/: custom_block_stack_builder.rs  procedures_definition.rs
wasm2sb/src/scratch/block/reformat/: mod.rs  procedures_definition.rs
wasm2sb/src/scratch/block/to_utf8/: check_unicode.rs  check_uppercase.rs  generator.rs  mod.rs  unicode.rs
wasm2sb/src/wasm/: adjust.rs  decode.rs  interpreter_descriptor.rs  mod.rs  scheme_versions.rs
wasm2sb/src/wasm/sb/: mod.rs
