[workspace]
resolver = "2"
members = [ "testcode", "testreactor", "wasm2sb", "buddy_block", "depict_nums", "wasm-sb-bindgen", "wasm-sb-bindgen-testcode", "wasm-sb-bindgen-macro", "sb-itchy-support"]
default-members = ["wasm2sb"]

[workspace.package]
authors = ["oligami <nziq53@gmail.com>"]
# license = "MIT/Apache-2.0"
license = "LGPL-3.0"
edition = "2021"
rust-version = "1.75"
version = "0.1.0"
