[package]
name = "sb3_ast"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sb-sbity = { version = "0.6.0", git = "https://github.com/rusty-scratch/sb-sbity" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = "0.2.12"
parking_lot = "0.12.1"

[dependencies.zip]
default-features = false
version = "0.6"
features = ["deflate"]

