[package]
name = "wasm-sb-bindgen-testcode"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
exclude = ["*.wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-sb-bindgen = { path = "../wasm-sb-bindgen" }

[dependencies.wee_alloc]
version = "0.4"
default-features = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1.7", optional = true }

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# opt-level = "z"

# wasm-bindgen --debug --no-demangle --keep-debug --out-dir wasm ../target/wasm32-unknown-unknown/release/testcode.wasmwasm-bindgen --debug --no-demangle --keep-debug --out-dir wasm ../target/wasm32-unknown-unknown/release/testcode.wasm
