[package]
name = "wasm-to-scratch"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wasmparser = "0.121"
# https://docs.rs/rs-sb3/
sb-sbity = { version = "0.6.0", git = "https://github.com/rusty-scratch/sb-sbity" }
anyhow = "1"
wasm-ast = { version = "0.1", features = ["parser"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = "0.2.12"
# wasm-opt = "0.116"

[dependencies.zip]
default-features = false
version = "0.6"
features = ["deflate"]

[dependencies.wain-syntax-binary]
version = "0.1"

[dependencies.wain-ast]
version = "0.2"
