[package]
name = "wasm-to-scratch"
version.workspace = true
edition.workspace = true
description = "Converts WebAssembly to Scratch 3.0 projects"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wasmparser = "0.121"
# https://docs.rs/rs-sb3/
sb-sbity = { version = "0.6.0", git = "https://github.com/rusty-scratch/sb-sbity" }
sb-itchy = { git = "https://github.com/oligamiq/sb-itchy" }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
# wasm-opt = "0.116"

[dependencies.getrandom]
version = "0.2"

[dependencies.zip]
default-features = false
version = "0.6"
features = ["deflate"]

[dependencies.wain-syntax-binary]
version = "0.1"

[dependencies.wain-ast]
version = "0.2"

[dependencies.wain-exec]
version = "0.3"

[dependencies.wasm-opt]
version = "0.116"
# default-features = false
