[package]
name = "wasm2sb"
version.workspace = true
edition.workspace = true
description = "Converts WebAssembly to Scratch 3.0 projects"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# wasmparser = "0.121"
# https://docs.rs/rs-sb3/
sb-sbity = { version = "0.6.0", git = "https://github.com/rusty-scratch/sb-sbity" }
sb-itchy = { git = "https://github.com/oligamiq/sb-itchy" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
walrus = "0.20"

# log
log = "0.4"
env_logger = "0.11"

# error
eyre = { version = "0.6", default-features = false, features = ["auto-install", "track-caller"] }

[dependencies.futures-lite]
version = "2.3"
default-features = false

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.wain-syntax-binary]
version = "0.1"

[dependencies.wain-ast]
version = "0.2"

[dependencies.wain-exec]
version = "0.3"

[dependencies.async_zip]
version = "0.0"
default-features = false

features = ["full-wasm"]

[dependencies.id-arena]
version = "2.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.wasm-opt]
version = "0.116"
# default-features = false

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.clap]
version = "4.5"
default-features = false
features = ["derive", "std"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.cargo_metadata]
version = "0.18"
